[feature] controllers in implementation, Open API generation is functional
