# src/main/java/com/ubs/m295_projectapplication/controller/ProjectController.java
@@ -1,7 +1,9 @@
 package com.ubs.m295_projectapplication.controller;
 
+import com.ubs.gen.controller.ProjectApi;
+import com.ubs.gen.module.ProjectAdminBody;
 import com.ubs.m295_projectapplication.jdbc.ProjectDao;
-import com.ubs.module.Project;
+import com.ubs.gen.module.Project;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -9,18 +11,11 @@ import org.springframework.web.bind.annotation.*;
 import java.sql.SQLException;
 import java.util.List;
 
+
 @RestController
 @RequestMapping("/m295")
 @Slf4j
-public class ProjectController {
-
-    private final static String GET_ALL_PROJECT_PATH = "/project";
-    private final static String GET_ONE_PROJECT_PATH = "/project/{projectId}";
-
-    private final static String ADMIN_POST_PROJECT_PATH = "/admin/project";
-    private final static String ADMIN_PUT_PROJECT_PATH = "/admin/project}";
-    private final static String ADMIN_DELETE_PROJECT_PATH = "/admin/project/{projectId}";
-
+public class ProjectController extends AbstractController implements ProjectApi{
     private final ProjectDao projectDao;
 
     public ProjectController(ProjectDao projectDao) {
@@ -28,65 +23,82 @@ public class ProjectController {
     }
 
 
-    @GetMapping(GET_ALL_PROJECT_PATH)
-    public @ResponseBody ResponseEntity getAllProjects() {
+    @Override
+    public ResponseEntity<List<Project>> getProjects() {
         log.info("Getting all projects");
         try {
             List<Project> projectList = projectDao.getAllProjects();
-            return ResponseEntity.ok().body(projectList);
+            return okRespond(projectList);
         } catch (SQLException e) {
             log.warn("Error getting projects", e);
-            return ResponseEntity.badRequest().body(e.getMessage());
+
+            throw badRequestRespond(e);
+        } catch (Exception e) {
+            log.error("Critical error getting projects", e);
+            throw internalServerErrorRespond(e);
+
         }
     }
 
-    @GetMapping(GET_ONE_PROJECT_PATH)
-    public @ResponseBody ResponseEntity getOneSoftware(@PathVariable("projectId") int projectId) {
+    @Override
+    public ResponseEntity<Project> getProject(Long projectId) {
         log.info("Getting one project");
         try {
-            Project project = projectDao.getProjectById(projectId);
-            return ResponseEntity.ok().body(project);
+            Project project = projectDao.getProjectById(Math.toIntExact(projectId));
+            return okRespond(project);
         } catch (SQLException e) {
             log.warn("Error getting project", e);
-            return ResponseEntity.badRequest().body(e.getMessage());
+            throw badRequestRespond(e);
+        } catch (Exception e) {
+            log.error("Critical error getting project", e);
+            throw internalServerErrorRespond(e);
         }
     }
 
-    @PostMapping(ADMIN_POST_PROJECT_PATH)
-    public ResponseEntity postSoftware(@RequestBody Project project) {
+    @Override
+    public ResponseEntity<Project> postProject(ProjectAdminBody projectAdminBody) {
         log.info("Posting one project");
         try {
-            projectDao.addProject(project);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
+            Project project = new Project().projectName(projectAdminBody.getProjectName());
+            int status = projectDao.addProject(project);
+            return okRespond(project);
+        } catch (SQLException e) {
             log.warn("Error posting project", e);
-            return ResponseEntity.badRequest().body(e.getMessage());
+            throw badRequestRespond(e);
+        } catch (Exception e) {
+            log.error("Critical error posting project", e);
+            throw internalServerErrorRespond(e);
         }
     }
 
-    @PutMapping(ADMIN_PUT_PROJECT_PATH)
-    public ResponseEntity putSoftware(@RequestBody Project project) {
+    @Override
+    public ResponseEntity<Project> putProject(Project project) {
         log.info("Putting one project");
         try {
-            projectDao.updateProject(project);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
+            int status = projectDao.updateProject(project);
+            return okRespond(project);
+        } catch (SQLException e) {
             log.warn("Error putting project", e);
-            return ResponseEntity.badRequest().body(e.getMessage());
+            throw badRequestRespond(e);
+        } catch (Exception e) {
+            log.error("Critical error putting project", e);
+            throw internalServerErrorRespond(e);
         }
     }
 
-    @DeleteMapping(ADMIN_DELETE_PROJECT_PATH)
-    public ResponseEntity deleteSoftware(@PathVariable("projectId") int projectId) {
+    @Override
+    public ResponseEntity<Integer> deleteProject(Long projectId) {
         log.info("Deleting one project");
         try {
-            projectDao.deleteTeamById(projectId);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
+            int status = projectDao.deleteTeamById(Math.toIntExact(projectId));
+            return okRespond(status);
+        } catch (SQLException e) {
             log.warn("Error deleting project", e);
-            return ResponseEntity.badRequest().body(e.getMessage());
+            throw badRequestRespond(e);
+        } catch (Exception e) {
+            log.error("Critical error deleting project", e);
+            throw internalServerErrorRespond(e);
         }
     }
-
 
 }
